k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: puppet-sneakernet
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    deployment: puppet-sneakernet
